--- a/writeups/.obsidian/workspace
+++ b/writeups/.obsidian/workspace
@@ -10,7 +10,7 @@
           "type": "markdown",
           "state": {
             "file": "serve-page.md",
-            "mode": "preview"
+            "mode": "source"
           }
         }
       }
