--- a/Web/alles-chat/alleschat/docker-compose.yml
+++ b/Web/alles-chat/alleschat/docker-compose.yml
@@ -14,6 +14,8 @@ services:
     build:
       context: ./app
     privileged: false
+    volumes: 
+    - $HOME/.Xauthority:/root/.Xauthority:rw
     depends_on:
       - api
     networks:
